web/src/Web.App/AssetSrc/scss/main.scss
/* ... */
.options-form .options-form__checkboxes {
  flex: 1 1 auto;
  min-width: 0;
}

.actions-form
{
  display: flex;
  gap: govuk-spacing(3);
  align-items: flex-start;

  @include govuk-media-query($until: tablet) {
    flex-direction: column;
    gap: govuk-spacing(1);
  }
}

.actions-form__button
{
  width: 100%;

  @include govuk-media-query($from: tablet) {
    align-self: flex-start;
    margin-top: govuk-spacing(6);
    width: auto;
  }
}

.senior-leadership-actions .page-action .govuk-button
{
  @include govuk-media-query($from: tablet) {
    margin-top: govuk-spacing(6);
  }
}

.app-card-row {
  display: flex;
  flex-wrap: wrap;
  gap: govuk-spacing(4);
  margin-bottom: govuk-spacing(4);
}

.app-removable-card {
  box-sizing: border-box;
  flex: 1 1 100%;
  display: flex;
  flex-direction: column;
  border: 1px solid $govuk-border-colour;
  gap: govuk-spacing(4);
  align-items: center;
  text-align: center;
  padding: govuk-spacing(4);

  @media ((min-width: 665px)) {
    flex: 0 0 calc((100% - #{govuk-spacing(4)}) / 2);
    flex-direction: row;
    justify-content: space-between;
    text-align: left;
  }

  @media (min-width: 980px) {
    flex: 0 0 calc((100% - (2 * #{govuk-spacing(4)})) / 3);
    flex-direction: row;
    justify-content: space-between;
    text-align: left;
  }
}

.min-height-two-lines {
  min-height: 2lh;
}

.wide-page {
  .govuk-width-container {
    @include govuk-width-container(1200px);
  }
}

